--- a/be-circle/package.json
+++ b/be-circle/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/amqplib": "^0.10.4",
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.4",
@@ -41,6 +42,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
